Don't remove the gesture requirement in the autoplay experiment.

Instead of permanently unlocking the media element when the autoplay
experiment permits autoplay, leave the element locked and override
the gesture requirement for the particular play request.

This also turns off deferred playback due to mute changes.  Instead,
checks for muted media are applied only when the playback is
attempted.  Only visibility requirements are deferred.

BUG=608341

Review-Url: https://codereview.chromium.org/1949633002
Cr-Commit-Position: refs/heads/master@{#394558}

Former-commit-id: 1301c3d6b3ea7b0ace8849580eaecd311c83b7bb